--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/_layout.tsx", "app/(tabs)/index.jsapp/tabs/about.jsxt.jsx"  ]
 }
